--- a/.github/workflows/banner.yml
+++ b/.github/workflows/banner.yml
@@ -1,41 +1,34 @@
-from PIL import Image, ImageDraw, ImageFont
-import os
+name: Generate Banner
 
-# Dimensiones del banner
-W, H = 600, 200
-frames = []
-font = ImageFont.load_default()
+on:
+  schedule:
+    - cron: "0 0 * * *"   # corre todos los días a medianoche
+  workflow_dispatch:       # permite ejecutarlo manualmente
 
-# Textos que se mostrarán en secuencia
-texts = [
-    "⚽ El jugador se prepara...",
-    "⚽ Patea el balón...",
-    "⚽ El balón vuela...",
-    "🏟️ GOOOOOOL !!!",
-    "SAMUEL SALAZAR OSPINA"
-]
+jobs:
+  render:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-# Crear los frames del GIF
-for t in texts:
-    img = Image.new("RGB", (W, H), color="navy")
-    d = ImageDraw.Draw(img)
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
 
-    # Calcular tamaño del texto con textbbox
-    bbox = d.textbbox((0, 0), t, font=font)
-    w, h = bbox[2] - bbox[0], bbox[3] - bbox[1]
+      - name: Install dependencies
+        run: pip install pillow
 
-    # Centrar el texto en el banner
-    d.text(((W - w) / 2, (H - h) / 2), t, fill="white", font=font)
-    frames.append(img)
+      - name: Run banner script
+        run: python scripts/banner.py
 
-# Crear carpeta de salida si no existe
-os.makedirs("assets", exist_ok=True)
-
-# Guardar como GIF animado
-frames[0].save(
-    "assets/banner.gif",
-    save_all=True,
-    append_images=frames[1:],
-    duration=1000,   # duración de cada frame (ms)
-    loop=0           # 0 = bucle infinito
-)
+      - name: Commit banner
+        run: |
+          git config user.name github-actions
+          git config user.email actions@github.com
+          git add assets/banner.gif
+          git commit -m "update banner" || echo "no changes"
+          git push
